--- a/homework/Day_001_HW.ipynb
+++ b/homework/Day_001_HW.ipynb
@@ -152,11 +152,76 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 作業1："
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "請上 Kaggle, 在 Competitions 或 Dataset 中找一組競賽或資料並寫下：\n",
+    "\n",
+    "1. 你選的這組資料為何重要\n",
+    "\n",
+    "2. 資料從何而來 (tips: 譬如提供者是誰、以什麼方式蒐集)\n",
+    "\n",
+    "3. 蒐集而來的資料型態為何\n",
+    "\n",
+    "4. 這組資料想解決的問題如何評估"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Answers:\n",
+    "\n",
+    "https://www.kaggle.com/c/tmdb-box-office-prediction/data\n",
+    "我選了預測電影票房的資料\n",
+    "1. 若可以知道電影票房會受什麼影響，電影公司可以費配每個項目的資金比例，得到最佳成果\n",
+    "2. 這個資料是從TMDB蒐集而來的\n",
+    "3. 這是一組結構化的資料，由一張大表格呈現。內容包含id,belongs_to_collection,budget...\n",
+    "4. 我們應該要找到每個feature對於票房的影響性   \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 作業2："
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "想像你經營一個自由載客車隊，你希望能透過數據分析以提升業績，請你思考並描述你如何規劃整體的分析/解決方案：\n",
+    "\n",
+    "1. 核心問題為何 (tips：如何定義 「提升業績 & 你的假設」)\n",
+    "\n",
+    "2. 資料從何而來 (tips：哪些資料可能會對你想問的問題產生影響 & 資料如何蒐集)\n",
+    "\n",
+    "3. 蒐集而來的資料型態為何\n",
+    "\n",
+    "4. 你要回答的問題，其如何評估 (tips：你的假設如何驗證)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Answers:\n",
+    "\n",
+    "1. 希望能縮短客人等待叫車的時間，讓每位司機空車的時間減少\n",
+    "2. 紀錄每個司機載客的地點及時間\n",
+    "3. 結構化資料\n",
+    "4. 預測特定區域在哪個時間點會有客人\n"
+   ]
   },
   {
    "cell_type": "code",
