--- a/homework/Day_012_HW.ipynb
+++ b/homework/Day_012_HW.ipynb
@@ -147,12 +147,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(20, 30]     6\n",
+       "(50, 100]    3\n",
+       "(30, 50]     3\n",
+       "(10, 20]     2\n",
+       "(0, 10]      2\n",
+       "Name: customized_age_grp, dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ages[\"customized_age_grp\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "ages[\"equal_freq_age\"].value_counts()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
